# tetris

./: .clang-format  CMakeLists.txt  Location.cpp  Location.h  Shape.cpp  Shape.h  conanfile.py
include/: Location.h  Shape.h  Tetris.h
src/: Location.cpp  Shape.cpp  Tetris.cpp  main.cpp
